--- a/tv-smartLiving.html
+++ b/tv-smartLiving.html
@@ -164,7 +164,7 @@
           </div>
           <div class="container">  <h5>
     <a href="category-of-devices.html">Category of Devices</a>>Tv & Smart Living
-    </h5>  <h1>Tablet & Computer </h1>
+    </h5>  <h1>Tv & Smart Living </h1>
              </div>
           <div class="row">
           </div>
