--- a/technical-characteristics.html
+++ b/technical-characteristics.html
@@ -10,7 +10,7 @@
   
     <!--<link rel="icon" href="C:\Users\Marco\Desktop\prove html\bootstrap-3.3.6\docs\favicon.ico">-->
 
-    <title>Presentation</title>
+    <title>Technical Characteristics</title>
       
       <script src="jquery.js" type="text/javascript"></script>
       <script src="technicalScript.js" type="text/javascript"></script>
@@ -162,14 +162,14 @@
               </div>
           </div>
           <div class="container">  <h5>
-              <a href="category-of-devices.html">Category of Devices</a>><a href="smartphone-telephone.html">Smartphone & Telephones</a>><a href="smartphone-description.html">Presentation</a>>Technical Characteristics
+              <a href="category-of-devices.html">Category of Devices</a>><a href="smartphone-telephone.html">Smartphone & Telephones</a>><a class="phone-specific" href="smartphone-description.html">Presentation</a>>Technical Characteristics
     </h5> 
              </div>
           <div class="row">
           </div>
-            <div class=container >  <a class="btn btn-primary btn-lg" href="smartphone-description.html" role="button">Presentation &raquo;</a>
-                <a class="btn btn-primary btn-lg" href="available-services.html" role="button">Available services &raquo;</a>
-                <a class="btn btn-primary btn-lg" href="assistance-for.html" role="button">Assistance for &raquo;</a>
+            <div class=container >  <a class="btn btn-primary btn-lg phone-specific" href="smartphone-description.html" role="button">Presentation &raquo;</a>
+                <a class="btn btn-primary btn-lg phone-specific" href="available-services.html" role="button">Available services &raquo;</a>
+                <a class="btn btn-primary btn-lg phone-specific" href="assistance-for.html" role="button">Assistance for &raquo;</a>
                 <a class="btn btn-primary btn-lg" href="buy-form.html" role="button">Buy &raquo;</a>
                 
                 </div>
