--- a/technical-characteristicsm.html
+++ b/technical-characteristicsm.html
@@ -10,10 +10,10 @@
   
     <!--<link rel="icon" href="C:\Users\Marco\Desktop\prove html\bootstrap-3.3.6\docs\favicon.ico">-->
 
-    <title>Presentation</title>
+    <title>Technical Characteristics</title>
       
       <script src="jquery.js" type="text/javascript"></script>
-      <script src="iphoneScript.js" type="text/javascript"></script>
+      <script src="technicalScriptm.js" type="text/javascript"></script>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap-3.3.6\css\bootstrap.min.css" rel="stylesheet">
@@ -74,11 +74,11 @@
                           </li>
                           <li><a href="#">Contacts</a></li>
                           <li class="dropdown active">
-                              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category of devices <span class="caret"></span></a>
+                              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Category of devices <span class="caret"></span></a>
                               <ul class="vertical-dropdown-menu dropdown-menu">
-                                  <li class="active"><a href="#">Smartphone &amp; Telephones</a></li>
+                                  <li ><a href="#">Smartphone &amp; Telephones</a></li>
                                   <li><a href="#">Tablet &amp; Computer</a></li>
-                                  <li><a href="#">Modem &amp; Networking</a></li>
+                                  <li class="active"><a href="#">Modem &amp; Networking</a></li>
                                   <li><a href="#">Tv &amp; SmartLiving</a></li>
                               </ul>
                           </li>
@@ -162,12 +162,12 @@
               </div>
           </div>
           <div class="container">  <h5>
-              <a href="category-of-devices.html">Category of Devices</a>><a href="smartphone-telephone.html">Smartphone & Telephones</a>>Presentation
+              <a href="category-of-devices.html">Category of Devices</a>><a href="smartphone-telephone.html">Modem & Networking</a>><a class="phone-specific" href="modem-description.html">Presentation</a>>Technical Characteristics
     </h5> 
              </div>
           <div class="row">
           </div>
-            <div class=container >  <a class="btn btn-primary btn-lg phone-specific" href="technical-characteristics.html" role="button">Technical characteristics &raquo;</a>
+            <div class=container >  <a class="btn btn-primary btn-lg phone-specific" href="modem-description.html" role="button">Presentation &raquo;</a>
                 <a class="btn btn-primary btn-lg phone-specific" href="available-services.html" role="button">Available services &raquo;</a>
                 <a class="btn btn-primary btn-lg phone-specific" href="assistance-for.html" role="button">Assistance for &raquo;</a>
                 <a class="btn btn-primary btn-lg phone-specific" href="buy-form.html" role="button">Buy &raquo;</a>
