--- a/tv-description.html
+++ b/tv-description.html
@@ -13,7 +13,7 @@
     <title>Presentation</title>
       
       <script src="jquery.js" type="text/javascript"></script>
-      <script src="iphoneScript.js" type="text/javascript"></script>
+      <script src="tv1.js" type="text/javascript"></script>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap-3.3.6\css\bootstrap.min.css" rel="stylesheet">
@@ -76,10 +76,10 @@
                           <li class="dropdown active">
                               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category of devices <span class="caret"></span></a>
                               <ul class="vertical-dropdown-menu dropdown-menu">
-                                  <li class="active"><a href="#">Smartphone &amp; Telephones</a></li>
-                                  <li><a href="#">Tablet &amp; Computer</a></li>
-                                  <li><a href="#">Modem &amp; Networking</a></li>
-                                  <li><a href="#">Tv &amp; SmartLiving</a></li>
+                                  <li ><a href="#">Smartphone &amp; Telephones</a></li>
+                                  <li ><a href="#">Tablet &amp; Computer</a></li>
+                                  <li ><a href="#">Modem &amp; Networking</a></li>
+                                  <li class="active"><a href="#">Tv &amp; SmartLiving</a></li>
                               </ul>
                           </li>
                           <li><a href="#">Promotions</a></li>
@@ -134,7 +134,7 @@
                         <li><a href="#">Smartphone & Telephones</a></li>
                         <li><a href="#">Tablet & Computer</a></li>
                         <li><a href="#">Modem & Networking</a></li>
-                        <li><a href="#">Tv & SmartLiving</a></li>
+                        <li class="active"><a href="#">Tv & SmartLiving</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Promotions</a></li>
@@ -162,12 +162,12 @@
               </div>
           </div>
           <div class="container">  <h5>
-              <a href="category-of-devices.html">Category of Devices</a>><a href="smartphone-telephone.html">Smartphone & Telephones</a>>Presentation
+              <a href="category-of-devices.html">Category of Devices</a>><a href="tv-smartLiving.html">Tv & Smart Living</a>>Presentation
     </h5> 
              </div>
           <div class="row">
           </div>
-            <div class=container >  <a class="btn btn-primary btn-lg phone-specific" href="technical-characteristics.html" role="button">Technical characteristics &raquo;</a>
+            <div class=container >  <a class="btn btn-primary btn-lg phone-specific" href="technical-characteristicstv.html" role="button">Technical characteristics &raquo;</a>
                 <a class="btn btn-primary btn-lg phone-specific" href="available-services.html" role="button">Available services &raquo;</a>
                 <a class="btn btn-primary btn-lg phone-specific" href="assistance-for.html" role="button">Assistance for &raquo;</a>
                 <a class="btn btn-primary btn-lg phone-specific" href="buy-form.html" role="button">Buy &raquo;</a>
