--- a/categorie of assistance smart life.html
+++ b/categorie of assistance smart life.html
@@ -80,22 +80,22 @@
                               </ul>
                           </li>
                           <li><a href="promotions.html">Promotions</a></li>
-                          <li class="dropdown active">
+                          <li class="dropdown">
                               <a href="category-of-services.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category of services <span class="caret"></span></a>
                               <ul class="vertical-dropdown-menu dropdown-menu">
-                                  <li class="active"><a href="tv-entertainment.html">Tv & Entertainment</a></li>
+                                  <li><a href="tv-entertainment.html">Tv & Entertainment</a></li>
                                  <li><a href="health-wellness.html">Health & Wellness</a></li>
                                  <li><a href="home-family.html">Home & Family</a></li>
                                  <li><a href="personal-services.html">Personal Services</a></li>
                               </ul>
                           </li>
-                          <li class="dropdown">
+                          <li class="dropdown active">
                               <a href="category-of-assserv.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category of assistance <span class="caret"></span></a>
                               <ul class="vertical-dropdown-menu dropdown-menu">
                                   <li><a href="line-management.html">Line & Management</a></li>
                                   <li><a href="costs-payments.html">Costs & Payments control</a></li>
                                   <li><a href="Hw-and-config-support.html">Hardware & Configuration Support</a></li>
-                                  <li><a href="smartlife-assistance.html">SmartLife</a></li>
+                                  <li class="active"><a href="smartlife-assistance.html">SmartLife</a></li>
                               </ul>
                           </li>
                           <li><a href="highlights.html">Highlights</a></li>
@@ -135,7 +135,7 @@
                     </ul>
                 </li>
                 <li><a href="promotions.html">Promotions</a></li>
-                <li class="active"><a href="category-of-services.html">Category of services</a>
+                <li><a href="category-of-services.html">Category of services</a>
               <ul>
                  <li><a href="tv-entertainment.html">Tv & Entertainment</a></li>
                  <li><a href="health-wellness.html">Health & Wellness</a></li>
@@ -143,7 +143,7 @@
                  <li><a href="personal-services.html">Personal Services</a></li>
               </ul>
            </li>
-                <li><a href="category-of-assserv.html">Category of assistance</a>
+                <li class="active"><a href="category-of-assserv.html">Category of assistance</a>
                     <ul>
                         <li><a href="line-management.html">Line & Management</a></li>
                         <li><a href="costs-payments.html">Costs & Payments control</a></li>
