--- a/forinvestors.html
+++ b/forinvestors.html
@@ -60,13 +60,13 @@
                                 <li><a href="Projects.html">Projects</a></li>
                               </ul>
                           </li>
-                          <li class="dropdown">
+                          <li class="dropdown active">
                               <a href="thegroup.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">The group <span class="caret"></span></a>
                               <ul class="vertical-dropdown-menu dropdown-menu">
                                   <li><a href="thegroupdescription.html">Group Description</a></li>
                                 <li><a href="news.html">News</a></li>
                                 <li><a href="business-market.html">Business & Market</a></li>
-                                <li><a href="forinvestors.html">For Investors</a></li>       
+                                <li class="active"><a href="forinvestors.html">For Investors</a></li>       
                               </ul>
                           </li>
                           <li><a href="Contacts.html">Contacts</a></li>
@@ -80,10 +80,10 @@
                               </ul>
                           </li>
                           <li><a href="promotions.html">Promotions</a></li>
-                          <li class="dropdown active">
+                          <li class="dropdown">
                               <a href="category-of-services.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category of services <span class="caret"></span></a>
                               <ul class="vertical-dropdown-menu dropdown-menu">
-                                  <li class="active"><a href="tv-entertainment.html">Tv & Entertainment</a></li>
+                                  <li><a href="tv-entertainment.html">Tv & Entertainment</a></li>
                                  <li><a href="health-wellness.html">Health & Wellness</a></li>
                                  <li><a href="home-family.html">Home & Family</a></li>
                                  <li><a href="personal-services.html">Personal Services</a></li>
@@ -117,7 +117,7 @@
                         <li><a href="Projects.html">Projects</a></li>
                     </ul>
                 </li>
-                <li><a href="thegroup.html">The group</a>
+                <li class="active"><a href="thegroup.html">The group</a>
                     <ul>
                         <li><a href="thegroupdescription.html">Group Description</a></li>
                         <li><a href="news.html">News</a></li>
@@ -135,7 +135,7 @@
                     </ul>
                 </li>
                 <li><a href="promotions.html">Promotions</a></li>
-                <li class="active"><a href="category-of-services.html">Category of services</a>
+                <li><a href="category-of-services.html">Category of services</a>
               <ul>
                  <li><a href="tv-entertainment.html">Tv & Entertainment</a></li>
                  <li><a href="health-wellness.html">Health & Wellness</a></li>
