--- a/modem-description.html
+++ b/modem-description.html
@@ -73,20 +73,20 @@
                               </ul>
                           </li>
                           <li><a href="Contacts.html">Contacts</a></li>
-                          <li class="dropdown">
+                          <li class="dropdown active">
                               <a href="category-of-devices.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category of devices <span class="caret"></span></a>
                               <ul class="vertical-dropdown-menu dropdown-menu">
                                   <li><a href="smartphone-telephone.html">Smartphone & Telephones</a></li>
                                 <li><a href="tablet-computer">Tablet & Computer</a></li>
-                                <li><a href="modem.html">Modem & Networking</a></li>
+                                <li class="active"><a href="modem.html">Modem & Networking</a></li>
                                 <li><a href="tv-smartliving.html">Tv & SmartLiving</a></li>
                               </ul>
                           </li>
                           <li><a href="promotions.html">Promotions</a></li>
-                          <li class="dropdown active">
+                          <li class="dropdown">
                               <a href="category-of-services.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category of services <span class="caret"></span></a>
                               <ul class="vertical-dropdown-menu dropdown-menu">
-                                  <li class="active"><a href="tv-entertainment.html">Tv & Entertainment</a></li>
+                                  <li><a href="tv-entertainment.html">Tv & Entertainment</a></li>
                                  <li><a href="health-wellness.html">Health & Wellness</a></li>
                                  <li><a href="home-family.html">Home & Family</a></li>
                                  <li><a href="personal-services.html">Personal Services</a></li>
@@ -129,7 +129,7 @@
                     </ul>
                 </li>
                 <li><a href="Contacts.html">Contacts</a></li>
-                <li><a href="category-of-devices.html">Category of devices</a>
+                <li class="active"><a href="category-of-devices.html">Category of devices</a>
                     <ul>
                         <li><a href="smartphone-telephone.html">Smartphone & Telephones</a></li>
                         <li><a href="tablet-computer">Tablet & Computer</a></li>
@@ -138,7 +138,7 @@
                     </ul>
                 </li>
                 <li><a href="promotions.html">Promotions</a></li>
-                <li class="active"><a href="category-of-services.html">Category of services</a>
+                <li><a href="category-of-services.html">Category of services</a>
               <ul>
                  <li><a href="tv-entertainment.html">Tv & Entertainment</a></li>
                  <li><a href="health-wellness.html">Health & Wellness</a></li>
