--- a/technical-characteristict.html
+++ b/technical-characteristict.html
@@ -74,11 +74,11 @@
                               </ul>
                           </li>
                           <li><a href="Contacts.html">Contacts</a></li>
-                          <li class="dropdown">
+                          <li class="dropdown active">
                               <a href="category-of-devices.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category of devices <span class="caret"></span></a>
                               <ul class="vertical-dropdown-menu dropdown-menu">
                                   <li><a href="smartphone-telephone.html">Smartphone & Telephones</a></li>
-                                <li><a href="tablet-computer">Tablet & Computer</a></li>
+                                <li class="active"><a href="tablet-computer">Tablet & Computer</a></li>
                                 <li><a href="modem.html">Modem & Networking</a></li>
                                 <li><a href="tv-smartliving.html">Tv & SmartLiving</a></li>
                               </ul>
@@ -130,7 +130,7 @@
                     </ul>
                 </li>
                 <li><a href="Contacts.html">Contacts</a></li>
-                <li><a href="category-of-devices.html">Category of devices</a>
+                <li class="active"><a href="category-of-devices.html">Category of devices</a>
                     <ul>
                         <li><a href="smartphone-telephone.html">Smartphone & Telephones</a></li>
                         <li><a href="tablet-computer">Tablet & Computer</a></li>
@@ -139,7 +139,7 @@
                     </ul>
                 </li>
                 <li><a href="promotions.html">Promotions</a></li>
-                <li class="active"><a href="category-of-services.html">Category of services</a>
+                <li><a href="category-of-services.html">Category of services</a>
               <ul>
                  <li><a href="tv-entertainment.html">Tv & Entertainment</a></li>
                  <li><a href="health-wellness.html">Health & Wellness</a></li>
