--- a/health-wellness.html
+++ b/health-wellness.html
@@ -80,11 +80,11 @@
                               </ul>
                           </li>
                           <li><a href="promotions.html">Promotions</a></li>
-                          <li class="dropdown active">
+                          <li class="dropdown">
                               <a href="category-of-services.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category of services <span class="caret"></span></a>
                               <ul class="vertical-dropdown-menu dropdown-menu">
-                                  <li class="active"><a href="tv-entertainment.html">Tv & Entertainment</a></li>
-                                 <li><a href="health-wellness.html">Health & Wellness</a></li>
+                                  <li><a href="tv-entertainment.html">Tv & Entertainment</a></li>
+                                 <li class="active"><a href="health-wellness.html">Health & Wellness</a></li>
                                  <li><a href="home-family.html">Home & Family</a></li>
                                  <li><a href="personal-services.html">Personal Services</a></li>
                               </ul>
