--- a/homepage.html
+++ b/homepage.html
@@ -51,7 +51,7 @@
                       <button type="submit" class="btn btn-success">Sign in</button>
                   </form>
                    <ul id="menu-mobile" class="nav navbar-default">
-                          <li><a href="homepage.html">Home</a></li>
+                          <li class="active"><a href="homepage.html">Home</a></li>
                           <li class="dropdown">
                               <a href="whoweare.html"  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Who we are <span class="caret"></span></a>
                               <ul class="vertical-dropdown-menu dropdown-menu">
@@ -80,10 +80,10 @@
                               </ul>
                           </li>
                           <li><a href="promotions.html">Promotions</a></li>
-                          <li class="dropdown active">
+                          <li class="dropdown">
                               <a href="category-of-services.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category of services <span class="caret"></span></a>
                               <ul class="vertical-dropdown-menu dropdown-menu">
-                                  <li class="active"><a href="tv-entertainment.html">Tv & Entertainment</a></li>
+                                  <li><a href="tv-entertainment.html">Tv & Entertainment</a></li>
                                  <li><a href="health-wellness.html">Health & Wellness</a></li>
                                  <li><a href="home-family.html">Home & Family</a></li>
                                  <li><a href="personal-services.html">Personal Services</a></li>
@@ -109,7 +109,7 @@
               <div class="container">
                   <nav>
                       <ul id="menu-accordeon" class="nav navbar-default">
-                <li><a href="homepage.html">Home</a></li>
+                <li class="active"><a href="homepage.html">Home</a></li>
                 <li><a href="whoweare.html">Who we are</a>
                     <ul>
                         <li><a href="Who-we-are-innovation.html">Innovation</a></li>
@@ -135,7 +135,7 @@
                     </ul>
                 </li>
                 <li><a href="promotions.html">Promotions</a></li>
-                <li class="active"><a href="category-of-services.html">Category of services</a>
+                <li><a href="category-of-services.html">Category of services</a>
               <ul>
                  <li><a href="tv-entertainment.html">Tv & Entertainment</a></li>
                  <li><a href="health-wellness.html">Health & Wellness</a></li>
