--- a/whoweare.html
+++ b/whoweare.html
@@ -52,10 +52,10 @@
                   </form>
                    <ul id="menu-mobile" class="nav navbar-default">
                           <li><a href="homepage.html">Home</a></li>
-                          <li class="dropdown">
+                          <li class="dropdown active">
                               <a href="whoweare.html"  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Who we are <span class="caret"></span></a>
                               <ul class="vertical-dropdown-menu dropdown-menu">
-                                  <li><a href="Who-we-are-innovation.html">Innovation</a></li>
+                                  <li class="active"><a href="Who-we-are-innovation.html">Innovation</a></li>
                                 <li><a href="Testimonials.html">Testimonials</a></li>
                                 <li><a href="Projects.html">Projects</a></li>
                               </ul>
@@ -110,7 +110,7 @@
                   <nav>
                       <ul id="menu-accordeon" class="nav navbar-default">
                 <li><a href="homepage.html">Home</a></li>
-                <li><a href="whoweare.html">Who we are</a>
+                <li class="active"><a href="whoweare.html">Who we are</a>
                     <ul>
                         <li><a href="Who-we-are-innovation.html">Innovation</a></li>
                         <li><a href="Testimonials.html">Testimonials</a></li>
@@ -135,7 +135,7 @@
                     </ul>
                 </li>
                 <li><a href="promotions.html">Promotions</a></li>
-                <li class="active"><a href="category-of-services.html">Category of services</a>
+                <li><a href="category-of-services.html">Category of services</a>
               <ul>
                  <li><a href="tv-entertainment.html">Tv & Entertainment</a></li>
                  <li><a href="health-wellness.html">Health & Wellness</a></li>
