--- a/GPdescription.html
+++ b/GPdescription.html
@@ -10,7 +10,7 @@
   
     <!--<link rel="icon" href="C:\Users\Marco\Desktop\prove html\bootstrap-3.3.6\docs\favicon.ico">-->
 
-    <title>Gp Description</title>
+    <title>The Group - Description</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap-3.3.6\css\bootstrap.min.css" rel="stylesheet">
