--- a/forinvestors.html
+++ b/forinvestors.html
@@ -10,7 +10,7 @@
   
     <!--<link rel="icon" href="C:\Users\Marco\Desktop\prove html\bootstrap-3.3.6\docs\favicon.ico">-->
 
-    <title>TV - Activation &amp; Rules</title>
+    <title>For Investors</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap-3.3.6\css\bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
     <link href="bootstrap-3.3.6\css\ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="tvactrules.css" rel="stylesheet">
+    <link href="forinvestors.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -176,14 +176,14 @@
 <div class= container id="contentBox">
 
  <!-- columns divs, float left, no margin so there is no space between column, width=1/3 -->
-    <div id="column1" style="float:left; margin-left:20%; width:25%;">
-     <h3>Flavio Cattaneo CV</h3><img class="featurette-image img-responsive center-block" src="ImmaginiTIM/img14.jpg" alt="Generic placeholder image">
+    <div id="column1" style="float:left; margin:2%; width:28%;">
+     <h4>Flavio Cattaneo CV</h4><img class="featurette-image img-responsive center-block" src="ImmaginiTIM/img20.jpg" alt="Generic placeholder image">
     </div>
-    <div id="column2" style="float:left; margin:0;width:25%;">
-     <h3>Investor Events</h3><img class="featurette-image img-responsive center-block" src="ImmaginiTIM/img15.jpg" alt="Generic placeholder image">
+    <div id="column2" style="float:left; margin:2%;width:28%;">
+     <h4>Investor Events</h4><img class="featurette-image img-responsive center-block" src="ImmaginiTIM/img21.jpg" alt="Generic placeholder image">
     </div>
-    <div id="column3" style="float:left; margin:0;width:25%">
-     <h3>Browse & Download</h3><img class="featurette-image img-responsive center-block" src="ImmaginiTIM/img17.jpg" alt="Generic placeholder image">
+    <div id="column3" style="float:left; margin:2%;width:28%">
+     <h4>Browse & Download</h4><img class="featurette-image img-responsive center-block" src="ImmaginiTIM/img22.jpg" alt="Generic placeholder image">
     </div>
 </div>
           
