--- a/tv-entertainment.html
+++ b/tv-entertainment.html
@@ -168,11 +168,11 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-            <a href="tv.html">
+            <a href="tv1.html">
                 <h2 class="featurette-heading">TV  </h2></a><h3><span class="text-muted">Joy without limit!</span></h3>
         </div>
         <div class="col-md-5">
-            <a href="tv-entertainment.html">
+            <a href="tv1.html">
           <img class="featurette-image img-responsive center-block" src="ImmaginiTIM/tvimg.png" alt="Generic placeholder image">
             </a>
         </div>
@@ -196,11 +196,11 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-            <a href="timreading.html">
+            <a href="timreading1.html">
                 <h2 class="featurette-heading">TIM Reading  </h2></a><h3><span class="text-muted">Read whatever you want, whenever you want</span></h3>
         </div>
         <div class="col-md-5">
-            <a href="timreading.html">
+            <a href="timreading1.html">
           <img class="featurette-image img-responsive center-block" src="ImmaginiTIM/timreadingimg.png" alt="Generic placeholder image">
             </a>
         </div>
