--- a/tv1.html
+++ b/tv1.html
@@ -13,7 +13,7 @@
     <title>TV</title>
       
       <script src="jquery.js" type="text/javascript"></script>
-      <script src="tvscript.js" type="text/javascript"></script>
+      <script src="tv1.js" type="text/javascript"></script>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap-3.3.6\css\bootstrap.min.css" rel="stylesheet">
@@ -161,7 +161,7 @@
                   </nav>
               </div>
           </div>
-          <div class="container"><h1>TV & Entertainment</h1></div>
+          <div class="container"><h1>TV</h1></div>
           <div class="row">
           </div>
       
