--- a/timreading1.html
+++ b/timreading1.html
@@ -161,6 +161,10 @@
                   </nav>
               </div>
           </div>
+          <div class="container" id="path">  <h5>
+              <a href="category-of-services.html">Category of Services</a>><a href="tv-entertainment.html">TV & Entertainment</a>>TIMReading
+    </h5> 
+             </div>
           <div class="container"><h1>TIM Reading</h1></div>
           <div class="row">
           </div>
