--- a/tv-entertainment.html
+++ b/tv-entertainment.html
@@ -210,11 +210,11 @@
 
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-            <a href="timgames.html">
+            <a href="timgames1.html">
                <h2 class="featurette-heading">TIM Games  </h2></a><h3><span class="text-muted">Mettiti in gioco, una nuova sfida ti aspetta!</span></h3>
         </div>
         <div class="col-md-5 col-md-pull-7">
-            <a href="timgames.html">
+            <a href="timgames1.html">
           <img class="featurette-image img-responsive center-block" src="ImmaginiTIM/timgamesimg.png" alt="Generic placeholder image">
             </a>
         </div>
