--- a/ilovegamesactrules.html
+++ b/ilovegamesactrules.html
@@ -162,7 +162,7 @@
               </div>
           </div>
           <div class="container" id="path">  <h5>
-              <a href="category-of-services.html">Category of Services</a>><a href="tv-entertainment.html">TV & Entertainment</a>><a href="timgames.html">TIMGames</a>>I LOVE GAMES PROMO - Activation & Rules
+              <a href="category-of-services.html">Category of Services</a>><a href="tv-entertainment.html">TV & Entertainment</a>><a href="timgames1.html">TIMGames</a>>I LOVE GAMES PROMO - Activation & Rules
     </h5> 
              </div>
           <div class="row">
