--- a/quotidianifaq.html
+++ b/quotidianifaq.html
@@ -162,7 +162,7 @@
               </div>
           </div>
           <div class="container" id="path">  <h5>
-              <a href="category-of-services.html">Category of Services</a>><a href="tv-entertainment.html">TV & Entertainment</a>><a href="tv1.html">TV</a>>Quotidiani - FAQ
+              <a href="category-of-services.html">Category of Services</a>><a href="tv-entertainment.html">TV & Entertainment</a>><a href="timreading1.html">TIMReading</a>>Quotidiani - FAQ
     </h5> 
              </div>
           <div class="row">
